URLs fixed. Some information added in README.

--- a/projects.html
+++ b/projects.html
@@ -24,19 +24,19 @@
 	<TR VALIGN=TOP>
 		<TD WIDTH=25% STYLE="border: none; padding: 0cm">
 			<P CLASS="western" ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-			<A HREF="http://index.html/"><FONT SIZE=4>Home</FONT></A></P>
+			<A HREF="http://pa23.github.com/"><FONT SIZE=4>Home</FONT></A></P>
 		</TD>
 		<TD WIDTH=25% STYLE="; border: none; padding: 0cm">
 			<P CLASS="western" ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-			<A HREF="blog.html"><FONT SIZE=4>Blog</FONT></A></P>
+			<A HREF="http://pa23.github.com/blog.html"><FONT SIZE=4>Blog</FONT></A></P>
 		</TD>
 		<TD WIDTH=25% STYLE="; border: none; padding: 0cm">
 			<P CLASS="western" ALIGN=CENTER STYLE="background: #e6e6ff; border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-			<A HREF="projects.html"><FONT SIZE=4>Projects</FONT></A></P>
+			<A HREF="http://pa23.github.com/projects.html"><FONT SIZE=4>Projects</FONT></A></P>
 		</TD>
 		<TD WIDTH=25% STYLE="; border: none; padding: 0cm">
 			<P CLASS="western" ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-			<A HREF="blog_archive.html"><FONT SIZE=4>Blog archive</FONT></A></P>
+			<A HREF="http://pa23.github.com/blog_archive.html"><FONT SIZE=4>Blog archive</FONT></A></P>
 		</TD>
 	</TR>
 </TABLE>
