URL to old website added for r49 project.

--- a/projects.html
+++ b/projects.html
@@ -47,13 +47,13 @@ of modes and specific emissions for stationary diesel engine cycles
 Regulation No. 85, OST 37.001.234-81, GOST 17.2.2.05-97, GOST
 30574-98, GOST R 51249-99).</FONT></P>
 <P CLASS="western"><FONT SIZE=4><SPAN STYLE="font-weight: normal"><A HREF="https://github.com/pa23/r49">Project
-page</A> | <A HREF="https://github.com/pa23/r49/downloads">Downloads</A></SPAN></FONT></P>
+page</A> | <A HREF="http://sites.google.com/site/pa23r49/">Old website (RUS)</A> | <A HREF="https://github.com/pa23/r49/downloads">Downloads</A></SPAN></FONT></P>
 <P CLASS="western" STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.08cm; padding-left: 0cm; padding-right: 0cm">
 <BR>
 </P>
 <P CLASS="western"><FONT SIZE=5 STYLE="font-size: 20pt"><B>strcnt</B></FONT></P>
 <P CLASS="western" STYLE="font-weight: normal"><FONT SIZE=4>Getting
-the number of lines in text files. )</FONT></P>
+the number of lines in text files )</FONT></P>
 <P CLASS="western"><FONT SIZE=4><SPAN STYLE="font-weight: normal"><A HREF="https://github.com/pa23/strcnt">Project
 page</A> | <A HREF="https://github.com/pa23/strcnt/downloads">Downloads</A></SPAN></FONT></P>
 <P CLASS="western" STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.08cm; padding-left: 0cm; padding-right: 0cm">
