--- a/index.html
+++ b/index.html
@@ -1,59 +1,47 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML>
 <HEAD>
-	<META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=utf-8">
-	<TITLE></TITLE>
-	<META NAME="AUTHOR" CONTENT="Artem Petrov">
-	<STYLE TYPE="text/css">
-	<!--
-		P.western { font-family: "Liberation Serif", serif }
-		P.cjk { font-size: 14pt }
-		TD P.western { font-family: "Liberation Serif", serif }
-		TD P.cjk { font-size: 14pt }
-	-->
-	</STYLE>
+    <META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=utf-8">
+    <TITLE>pa23's website</TITLE>
+    <META NAME="AUTHOR" CONTENT="Artem Petrov">
 </HEAD>
-<BODY LANG="en-US" DIR="LTR">
-<P CLASS="western" STYLE="margin-top: 0.17in; page-break-after: avoid">
-<FONT SIZE=7 STYLE="font-size: 48pt"><B>pa23</B></FONT></P>
+<BODY LANG="en-US" LINK="#000080" VLINK="#800000" DIR="LTR">
+<FONT SIZE=7 STYLE="font-size: 48pt"><B>pa23</B></FONT><BR><BR>
 <TABLE WIDTH=100% CELLPADDING=4 CELLSPACING=0>
-	<COL WIDTH=64*>
-	<COL WIDTH=64*>
-	<COL WIDTH=64*>
-	<COL WIDTH=64*>
-	<TR VALIGN=TOP>
-		<TD WIDTH=25% STYLE="border: none; padding: 0in">
-			<P CLASS="western" ALIGN=CENTER STYLE="background: #e6e6ff; border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.04in 0in">
-			<A HREF="http://pa23.github.com/"><FONT SIZE=4>Home</FONT></A></P>
-		</TD>
-		<TD WIDTH=25% STYLE="; border: none; padding: 0in">
-			<P CLASS="western" ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.04in 0in">
-			<A HREF="http://pa23.github.com/blog.html"><FONT SIZE=4>Blog</FONT></A></P>
-		</TD>
-		<TD WIDTH=25% STYLE="; border: none; padding: 0in">
-			<P CLASS="western" ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.04in 0in">
-			<A HREF="http://pa23.github.com/projects.html"><FONT SIZE=4>Projects</FONT></A></P>
-		</TD>
-		<TD WIDTH=25% STYLE="; border: none; padding: 0in">
-			<P CLASS="western" ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.04in 0in">
-			<A HREF="http://pa23.github.com/blog_archive.html"><FONT SIZE=4>Blog archive</FONT></A></P>
-		</TD>
-	</TR>
+    <TR VALIGN=TOP>
+        <TD WIDTH=25% STYLE="border: none; padding: 0cm">
+            <P ALIGN=CENTER STYLE="background: #e6e6ff; border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
+            <A HREF="http://pa23.github.com/"><FONT SIZE=4>Home</FONT></A></P>
+        </TD>
+        <TD WIDTH=25% STYLE="; border: none; padding: 0cm">
+            <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
+            <A HREF="http://pa23.github.com/blog.html"><FONT SIZE=4>Blog</FONT></A></P>
+        </TD>
+        <TD WIDTH=25% STYLE="; border: none; padding: 0cm">
+            <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
+            <A HREF="http://pa23.github.com/projects.html"><FONT SIZE=4>Projects</FONT></A></P>
+        </TD>
+        <TD WIDTH=25% STYLE="; border: none; padding: 0cm">
+            <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
+            <A HREF="http://pa23.github.com/blog_archive.html"><FONT SIZE=4>Blog archive</FONT></A></P>
+        </TD>
+    </TR>
 </TABLE>
-<P CLASS="western"><FONT FACE="Liberation Serif, serif"><FONT SIZE=4>Wellcome
-to <SPAN STYLE="font-weight: normal">my</SPAN> website! My name is
-Artem Petrov. I'm a leading research engineer at Avtodizel company
-(Yaroslavl, Russia). My hobby is programming. I develop programs for
-engineering calculations and use C++ programming language and Qt
-framework. Also <SPAN LANG="en-US">I'm a follower of Free Software.</SPAN></FONT></FONT></P>
-<P CLASS="western"><A NAME="result_box"></A><FONT FACE="Liberation Serif, serif"><FONT SIZE=4><SPAN LANG="en">I
-really like programming and I hope that my programs and my sou</SPAN></FONT></FONT><FONT FACE="Liberation Serif, serif"><FONT SIZE=4><SPAN LANG="en-US">rce
-codes would be useful to someone. All my programs always will be
-Free. Today my choice is <A HREF="http://www.gnu.org/licenses/gpl-3.0.html">GPL</A>.</SPAN></FONT></FONT></P>
-<P CLASS="western" STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0in; padding-bottom: 0.03in; padding-left: 0in; padding-right: 0in">
-<BR>
-</P>
-<P CLASS="western" ALIGN=CENTER><FONT FACE="Liberation Serif, serif"><FONT SIZE=4><SPAN LANG="en-US"><A HREF="https://github.com/pa23">github</A>
-| <A HREF="http://vkontakte.ru/pa2311">vkontakte</A> | <A HREF="http://www.facebook.com/profile.php?id=100001046779586">facebook</A></SPAN></FONT></FONT></P>
+<P CLASS="western"><FONT FACE="Liberation Serif, serif"><FONT SIZE=4>
+Wellcome to my website! My name is Artem Petrov. I'm a leading research engineer
+at Avtodizel company (Yaroslavl, Russia). My hobby is programming. I develop
+programs for engineering calculations and use C++ programming language and Qt
+framework. Also I'm a follower of Free Software.
+<BR><BR>I really like programming and I hope that my programs and my source
+codes would be useful to someone. All my programs always will be Free. Today my
+choice is
+<A HREF="http://www.gnu.org/licenses/gpl-3.0.html">GPL</A>.</FONT></P>
+<P STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.08cm; padding-left: 0cm; padding-right: 0cm"><BR></P>
+<P ALIGN=CENTER><FONT FACE="Liberation Serif, serif"><FONT SIZE=4><SPAN LANG="en-US">
+    <A HREF="https://github.com/pa23">github</A> | 
+    <A HREF="http://vkontakte.ru/pa2311">vkontakte</A> | 
+    <A HREF="http://www.facebook.com/profile.php?id=100001046779586">facebook</A>
+</SPAN></FONT></FONT></P>
 </BODY>
 </HTML>
+
