index.html style fixed.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </TD>
     </TR>
 </TABLE>
-<FONT FACE="Liberation Serif, serif"><FONT SIZE=4>
+<BR><P STYLE="font-weight: normal"><FONT SIZE=4>
 Wellcome to my website! My name is Artem Petrov. I'm a leading research engineer
 at Avtodizel company (Yaroslavl, Russia). My hobby is programming. I develop
 programs for engineering calculations and use C++ programming language and Qt
@@ -35,7 +35,7 @@ framework. Also I'm a follower of Free Software.
 <BR><BR>I really like programming and I hope that my programs and my source
 codes would be useful to someone. All my programs always will be Free. Today my
 choice is
-<A HREF="http://www.gnu.org/licenses/gpl-3.0.html">GPL</A>.</FONT>
+<A HREF="http://www.gnu.org/licenses/gpl-3.0.html">GPL</A>.</FONT></P>
 <P STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.08cm; padding-left: 0cm; padding-right: 0cm"><BR></P>
 <P ALIGN=CENTER><FONT FACE="Liberation Serif, serif"><FONT SIZE=4><SPAN LANG="en-US">
     <A HREF="https://github.com/pa23">github</A> | 
