--- a/blog_archive.html
+++ b/blog_archive.html
@@ -29,11 +29,11 @@
 </TABLE>
 <P STYLE="font-weight: normal"><FONT SIZE=4>Here will be archive (2010) from the old r49 program site.</FONT></P>
 <P STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.08cm; padding-left: 0cm; padding-right: 0cm"><BR></P>
-<P ALIGN=CENTER><FONT FACE="Liberation Serif, serif"><FONT SIZE=4><SPAN LANG="en-US">
+<P ALIGN=CENTER><FONT SIZE=4>
     <A HREF="https://github.com/pa23">github</A> | 
     <A HREF="http://vkontakte.ru/pa2311">vkontakte</A> | 
     <A HREF="http://www.facebook.com/profile.php?id=100001046779586">facebook</A>
-</SPAN></FONT></FONT></P>
+</FONT></P>
 </BODY>
 </HTML>
 
