--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@ codes would be useful to someone. All my programs always will be Free. Today my
 choice is
 <A HREF="http://www.gnu.org/licenses/gpl-3.0.html">GPL</A>.</FONT></P>
 <P STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.08cm; padding-left: 0cm; padding-right: 0cm"><BR></P>
-<P ALIGN=CENTER><FONT FACE="Liberation Serif, serif"><FONT SIZE=4><SPAN LANG="en-US">
+<P ALIGN=CENTER><FONT SIZE=4>
     <A HREF="https://github.com/pa23">github</A> | 
     <A HREF="http://vkontakte.ru/pa2311">vkontakte</A> | 
     <A HREF="http://www.facebook.com/profile.php?id=100001046779586">facebook</A>
-</SPAN></FONT></FONT></P>
+</FONT></P>
 </BODY>
 </HTML>
 
