Some URLs added to index.html text.

--- a/index.html
+++ b/index.html
@@ -28,10 +28,14 @@
     </TR>
 </TABLE>
 <BR><P STYLE="font-weight: normal"><FONT SIZE=4>
-Wellcome to my website! My name is Artem Petrov. I'm a leading research engineer
-at Avtodizel company (Yaroslavl, Russia). My hobby is programming. I develop
-programs for engineering calculations and use C++ programming language and Qt
-framework. Also I'm a follower of Free Software.
+Wellcome to my website! My name is Artem Petrov. I'm a leading research engineer at
+<A HREF="http://avtodizel.gaz.ru/"><FONT SIZE=4>Avtodizel</FONT></A>
+company (Yaroslavl, Russia). My hobby is programming. I develop programs for engineering calculations and use
+<A HREF="http://en.wikipedia.org/wiki/C%2B%2B"><FONT SIZE=4>C++ programming language</FONT></A>
+and
+<A HREF="http://qt.nokia.com/products"><FONT SIZE=4>Qt framework</FONT></A>.
+Also I'm a follower of
+<A HREF="http://en.wikipedia.org/wiki/Free_software"><FONT SIZE=4>Free Software</FONT></A>.
 <BR><BR>I really like programming and I hope that my programs and my source
 codes would be useful to someone. All my programs always will be Free. Today my
 choice is
