--- a/projects.html
+++ b/projects.html
@@ -1,52 +1,56 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+
 <HTML>
 <HEAD>
     <META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=utf-8">
     <TITLE>pa23's website</TITLE>
     <META NAME="AUTHOR" CONTENT="Artem Petrov">
 </HEAD>
-<BODY LANG="en-US" LINK="#000080" VLINK="#800000" DIR="LTR">
+<BODY LANG="ru-RU" LINK="#000080" VLINK="#800000" DIR="LTR">
 <FONT SIZE=7 STYLE="font-size: 48pt"><B>pa23</B></FONT><BR><BR>
 <TABLE WIDTH=100% CELLPADDING=4 CELLSPACING=0>
     <TR VALIGN=TOP>
         <TD WIDTH=25% STYLE="border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-            <A HREF="http://pa23.github.com/"><FONT SIZE=4>Home</FONT></A></P>
+            <A HREF="http://pa23.github.com/"><FONT SIZE=4>Главная</FONT></A></P>
         </TD>
         <TD WIDTH=25% STYLE="; border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-            <A HREF="http://pa23.github.com/blog.html"><FONT SIZE=4>Blog</FONT></A></P>
+            <A HREF="http://pa23.github.com/blog.html"><FONT SIZE=4>Блог</FONT></A></P>
         </TD>
         <TD WIDTH=25% STYLE="; border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="background: #e6e6ff; border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-            <A HREF="http://pa23.github.com/projects.html"><FONT SIZE=4>Projects</FONT></A></P>
+            <A HREF="http://pa23.github.com/projects.html"><FONT SIZE=4>Проекты</FONT></A></P>
         </TD>
         <TD WIDTH=25% STYLE="; border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-            <A HREF="http://pa23.github.com/blog_archive.html"><FONT SIZE=4>Blog archive</FONT></A></P>
+            <A HREF="http://pa23.github.com/blog_archive.html"><FONT SIZE=4>Архив</FONT></A></P>
         </TD>
     </TR>
 </TABLE>
-<BR><FONT SIZE=5 STYLE="font-size: 20pt"><B>r49</B></FONT>
+<BR>
+
+<FONT SIZE=5 STYLE="font-size: 20pt"><B>r49</B></FONT>
 <P STYLE="font-weight: normal"><FONT SIZE=4>
-Calculation of modes and specific emissions for stationary diesel engine cycles
-(UN ECE Regulation No. 49, UN ECE Regulation No. 96, UN ECE Regulation No. 85,
-OST 37.001.234-81, GOST 17.2.2.05-97, GOST 30574-98, GOST R 51249-99).
+Расчет режимов и удельных выбросов для стационарных испытательных циклов дизельных 
+двигателей (Правила ЕЭК ООН N49, Правила ЕЭК ООН N96, Правила ЕЭК ООН N85, 
+ОСТ 37.001.234-81, ГОСТ 17.2.2.05-97, ГОСТ 30574-98, ГОСТ Р 51249-99).
 </FONT></P>
 <FONT SIZE=4><SPAN STYLE="font-weight: normal">
-    <A HREF="https://github.com/pa23/r49">Project page</A> | 
-    <A HREF="http://sites.google.com/site/pa23r49/">Old website (RUS)</A> | 
-    <A HREF="https://github.com/pa23/r49/downloads">Downloads</A>
+    <A HREF="https://github.com/pa23/r49">Страница проекта</A> | 
+    <A HREF="http://sites.google.com/site/pa23r49/">Старый сайт</A> | 
+    <A HREF="https://github.com/pa23/r49/downloads">Загрузки</A>
 </SPAN></FONT>
 <P STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.08cm; padding-left: 0cm; padding-right: 0cm"><BR></P>
 <FONT SIZE=5 STYLE="font-size: 20pt"><B>strcnt</B></FONT>
 <P STYLE="font-weight: normal"><FONT SIZE=4>
-Getting the number of lines in text files )
+Определение числа непустых строк в текстовых файлах.
 </FONT></P>
 <FONT SIZE=4><SPAN STYLE="font-weight: normal">
-    <A HREF="https://github.com/pa23/strcnt">Project page</A> | 
-    <A HREF="https://github.com/pa23/strcnt/downloads">Downloads</A>
+    <A HREF="https://github.com/pa23/strcnt">Страница проекта</A> | 
+    <A HREF="https://github.com/pa23/strcnt/downloads">Загрузки</A>
 </SPAN></FONT>
+
 <P STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.08cm; padding-left: 0cm; padding-right: 0cm"><BR></P>
 <P ALIGN=CENTER><FONT SIZE=4>
     <A HREF="https://github.com/pa23">github</A> | 
