--- a/blog_archive.html
+++ b/blog_archive.html
@@ -1,33 +1,38 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+
 <HTML>
 <HEAD>
     <META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=utf-8">
     <TITLE>pa23's website</TITLE>
     <META NAME="AUTHOR" CONTENT="Artem Petrov">
 </HEAD>
-<BODY LANG="en-US" LINK="#000080" VLINK="#800000" DIR="LTR">
+<BODY LANG="ru-RU" LINK="#000080" VLINK="#800000" DIR="LTR">
 <FONT SIZE=7 STYLE="font-size: 48pt"><B>pa23</B></FONT><BR><BR>
 <TABLE WIDTH=100% CELLPADDING=4 CELLSPACING=0>
     <TR VALIGN=TOP>
         <TD WIDTH=25% STYLE="border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-            <A HREF="http://pa23.github.com/"><FONT SIZE=4>Home</FONT></A></P>
+            <A HREF="http://pa23.github.com/"><FONT SIZE=4>Главная</FONT></A></P>
         </TD>
         <TD WIDTH=25% STYLE="; border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-            <A HREF="http://pa23.github.com/blog.html"><FONT SIZE=4>Blog</FONT></A></P>
+            <A HREF="http://pa23.github.com/blog.html"><FONT SIZE=4>Блог</FONT></A></P>
         </TD>
         <TD WIDTH=25% STYLE="; border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-            <A HREF="http://pa23.github.com/projects.html"><FONT SIZE=4>Projects</FONT></A></P>
+            <A HREF="http://pa23.github.com/projects.html"><FONT SIZE=4>Проекты</FONT></A></P>
         </TD>
         <TD WIDTH=25% STYLE="; border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="background: #e6e6ff; border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-            <A HREF="http://pa23.github.com/blog_archive.html"><FONT SIZE=4>Blog archive</FONT></A></P>
+            <A HREF="http://pa23.github.com/blog_archive.html"><FONT SIZE=4>Архив</FONT></A></P>
         </TD>
     </TR>
 </TABLE>
-<P STYLE="font-weight: normal"><FONT SIZE=4>Here will be archive (2010) from the old r49 program site.</FONT></P>
+
+<P STYLE="font-weight: normal"><FONT SIZE=4>
+Сайт еще слишком молод )
+</FONT></P>
+
 <P STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.08cm; padding-left: 0cm; padding-right: 0cm"><BR></P>
 <P ALIGN=CENTER><FONT SIZE=4>
     <A HREF="https://github.com/pa23">github</A> | 
