--- a/index.html
+++ b/index.html
@@ -1,45 +1,59 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+
 <HTML>
 <HEAD>
     <META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=utf-8">
     <TITLE>pa23's website</TITLE>
     <META NAME="AUTHOR" CONTENT="Artem Petrov">
 </HEAD>
-<BODY LANG="en-US" LINK="#000080" VLINK="#800000" DIR="LTR">
+<BODY LANG="ru-RU" LINK="#000080" VLINK="#800000" DIR="LTR">
 <FONT SIZE=7 STYLE="font-size: 48pt"><B>pa23</B></FONT><BR><BR>
 <TABLE WIDTH=100% CELLPADDING=4 CELLSPACING=0>
     <TR VALIGN=TOP>
         <TD WIDTH=25% STYLE="border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="background: #e6e6ff; border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-            <A HREF="http://pa23.github.com/"><FONT SIZE=4>Home</FONT></A></P>
+            <A HREF="http://pa23.github.com/"><FONT SIZE=4>Главная</FONT></A></P>
         </TD>
         <TD WIDTH=25% STYLE="; border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-            <A HREF="http://pa23.github.com/blog.html"><FONT SIZE=4>Blog</FONT></A></P>
+            <A HREF="http://pa23.github.com/blog.html"><FONT SIZE=4>Блог</FONT></A></P>
         </TD>
         <TD WIDTH=25% STYLE="; border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-            <A HREF="http://pa23.github.com/projects.html"><FONT SIZE=4>Projects</FONT></A></P>
+            <A HREF="http://pa23.github.com/projects.html"><FONT SIZE=4>Проекты</FONT></A></P>
         </TD>
         <TD WIDTH=25% STYLE="; border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-            <A HREF="http://pa23.github.com/blog_archive.html"><FONT SIZE=4>Blog archive</FONT></A></P>
+            <A HREF="http://pa23.github.com/blog_archive.html"><FONT SIZE=4>Архив</FONT></A></P>
         </TD>
     </TR>
 </TABLE>
-<BR><P STYLE="font-weight: normal"><FONT SIZE=4>
-Wellcome to my website! My name is Artem Petrov. I'm a leading research engineer at
-<A HREF="http://avtodizel.gaz.ru/"><FONT SIZE=4>Avtodizel</FONT></A>
-company (Yaroslavl, Russia). My hobby is programming. I develop programs for engineering calculations and use
-<A HREF="http://en.wikipedia.org/wiki/C%2B%2B"><FONT SIZE=4>C++ programming language</FONT></A>
-and
-<A HREF="http://qt.nokia.com/products"><FONT SIZE=4>Qt framework</FONT></A>.
-Also I'm a follower of
-<A HREF="http://en.wikipedia.org/wiki/Free_software"><FONT SIZE=4>Free Software</FONT></A>.
-<BR><BR>I really like programming and I hope that my programs and my source
-codes would be useful to someone. All my programs always will be Free. Today my
-choice is
-<A HREF="http://www.gnu.org/licenses/gpl-3.0.html">GPL</A>.</FONT></P>
+<BR>
+
+<P STYLE="font-weight: normal"><FONT SIZE=4>
+Я люблю 
+<A HREF="http://ru.wikipedia.org/wiki/C%2B%2B"><FONT SIZE=4>C++</FONT></A>. 
+Да, он не без темных мест, однако очень крут. Как справедливо заметил про C++ 
+<A HREF="http://cplusplus.dshevchenko.biz/"><FONT SIZE=4>Денис Васильевич</FONT></A>: 
+"Несовершенен, как все. Силён, как немногие.".
+<BR>
+В своих проектах я использую 
+<A HREF="http://qt.nokia.com/products"><FONT SIZE=4>Qt framework</FONT></A>, 
+достоинства которого трудно переоценить, а также очень удобную 
+<A HREF="http://ru.wikipedia.org/wiki/%D0%A1%D0%B8%D1%81%D1%82%D0%B5%D0%BC%D0%B0_%D1%83%D0%BF%D1%80%D0%B0%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D1%8F_%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%8F%D0%BC%D0%B8">систему управления версиями</A>
+<A HREF="http://git-scm.com/">git</A>.
+<BR>
+Я благодарен 
+<A HREF="https://github.com/">github.com</A>. С ним очень удобно.
+<BR>
+И еще один момент. Я - сторонник 
+<A HREF="http://en.wikipedia.org/wiki/Free_software"><FONT SIZE=4>Свободного программного обеспечения</FONT></A>. 
+И всегда им останусь. Мой выбор - 
+<A HREF="http://www.gnu.org/licenses/gpl-3.0.html">GPL</A>.
+<BR><BR>
+Данный сайт содержит информацию о моих проектах, релизах новых версий и просто некоторых мыслях. Надеюсь, что этот сайт будет вам полезен. Удачи!
+</FONT></P>
+
 <P STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.08cm; padding-left: 0cm; padding-right: 0cm"><BR></P>
 <P ALIGN=CENTER><FONT SIZE=4>
     <A HREF="https://github.com/pa23">github</A> | 
