index.html: structure of text changed. projects.html: screenshots links added. projects.html: information about people added. blog.html: information about new r49 release added.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 <BR>
 
 <P STYLE="font-weight: normal"><FONT SIZE=4>
-Я люблю 
+Я приветствую вас, посетитель! Мое имя - Артем Петров. 
+Данный сайт содержит информацию о моих проектах, релизах новых версий и просто некоторых мыслях. Надеюсь, что он будет вам полезен.
+<BR><BR>
+Немного о себе. Я люблю 
 <A HREF="http://ru.wikipedia.org/wiki/C%2B%2B"><FONT SIZE=4>C++</FONT></A>. 
 Да, он не без темных мест, однако очень крут. Как справедливо заметил про C++ 
 <A HREF="http://cplusplus.dshevchenko.biz/"><FONT SIZE=4>Денис Васильевич</FONT></A>: 
@@ -50,8 +53,6 @@
 <A HREF="http://en.wikipedia.org/wiki/Free_software"><FONT SIZE=4>Свободного программного обеспечения</FONT></A>. 
 И всегда им останусь. Мой выбор - 
 <A HREF="http://www.gnu.org/licenses/gpl-3.0.html">GPL</A>.
-<BR><BR>
-Данный сайт содержит информацию о моих проектах, релизах новых версий и просто некоторых мыслях. Надеюсь, что этот сайт будет вам полезен. Удачи!
 </FONT></P>
 
 <P STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.08cm; padding-left: 0cm; padding-right: 0cm"><BR></P>
