--- a/projects.html
+++ b/projects.html
@@ -35,16 +35,38 @@
 Расчет режимов и удельных выбросов для стационарных испытательных циклов дизельных 
 двигателей (Правила ЕЭК ООН N49, Правила ЕЭК ООН N96, Правила ЕЭК ООН N85, 
 ОСТ 37.001.234-81, ГОСТ 17.2.2.05-97, ГОСТ 30574-98, ГОСТ Р 51249-99).
+<BR><BR>
+Люди, внесшие вклад в проект ценными советами:
+<ol>
+    <li>Борис Романович Бланкштейн</li>
+    <li>Евгений Константинович Шприц</li>
+    <li>Александр Малютин</li>
+    <li>Андрей Кукушкин</li>
+    <li>Дмитрий Епанешников</li>
+</ol>
+Скриншоты:
+<ol>
+    <li><A HREF="http://pa23.github.com/r49_scr1.png">Qr49 после внесения исходных данных для расчета выбросов вредных выбросов с отработавшими газами</A></li>
+    <li><A HREF="http://pa23.github.com/r49_scr2.png">Qr49 после расчета выбросов вредных выбросов с отработавшими газами</A></li>
+</ol>
 </FONT></P>
 <FONT SIZE=4><SPAN STYLE="font-weight: normal">
     <A HREF="https://github.com/pa23/r49">Страница проекта</A> | 
     <A HREF="http://sites.google.com/site/pa23r49/">Старый сайт</A> | 
     <A HREF="https://github.com/pa23/r49/downloads">Загрузки</A>
 </SPAN></FONT>
+
 <P STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.08cm; padding-left: 0cm; padding-right: 0cm"><BR></P>
+
 <FONT SIZE=5 STYLE="font-size: 20pt"><B>strcnt</B></FONT>
 <P STYLE="font-weight: normal"><FONT SIZE=4>
 Определение числа непустых строк в текстовых файлах.
+<BR><BR>
+Скриншоты:
+<ol>
+    <li><A HREF="http://pa23.github.com/strcnt_scr1.png">strcnt с введенными данными</A></li>
+    <li><A HREF="http://pa23.github.com/strcnt_scr2.png">strcnt с результатами поиска и подсчета</A></li>
+</ol>
 </FONT></P>
 <FONT SIZE=4><SPAN STYLE="font-weight: normal">
     <A HREF="https://github.com/pa23/strcnt">Страница проекта</A> | 
