index.html: wikipedia link fixed. blog.html: r49-11.03 download link added. projects.html: information about r49 project added.

--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,9 @@
 I like github )
 </FONT></P>
 
-<FONT SIZE=5 STYLE="font-size: 20pt"><B>16.01.2011 - Релиз r49-11.03</B></FONT>
+<FONT SIZE=5 STYLE="font-size: 20pt"><B>16.01.2011 - Релиз 
+<A HREF="https://github.com/pa23/r49/downloads">r49-11.03</A>
+</B></FONT>
 <P STYLE="font-weight: normal"><FONT SIZE=4>
 <ol>
     <li>Весь проект переведен на использование контейнеров библиотеки Qt вместо низкоуровневых массивов с ручным управлением памятью.</li>
