--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <A HREF="https://github.com/">github.com</A>. С ним очень удобно.
 <BR>
 И еще один момент. Я - сторонник 
-<A HREF="http://en.wikipedia.org/wiki/Free_software"><FONT SIZE=4>Свободного программного обеспечения</FONT></A>. 
+<A HREF="http://ru.wikipedia.org/wiki/Free_software"><FONT SIZE=4>Свободного программного обеспечения</FONT></A>. 
 И всегда им останусь. Мой выбор - 
 <A HREF="http://www.gnu.org/licenses/gpl-3.0.html">GPL</A>.
 </FONT></P>
