--- a/blog.html
+++ b/blog.html
@@ -30,13 +30,18 @@
 </TABLE>
 <BR>
 
-<FONT SIZE=5 STYLE="font-size: 20pt"><B>07.01.2011 - Заметка</B></FONT>
+<FONT SIZE=5 STYLE="font-size: 20pt"><B>17.01.2011 - Релиз 
+<A HREF="https://github.com/pa23/r49/downloads">r49-11.04</A>
+</B></FONT>
 <P STYLE="font-weight: normal"><FONT SIZE=4>
-I like github )
+<ol>
+    <li>Улучшено удобство использования программы - установлена двусторонняя связь между табами главного окна и заданием на расчет (панель настройки расчета - task).</li>
+    <li>Установлена корректная ширина столбца при формировании файла-заготовки для расчета выбросов вредных веществ.</li>
+</ol>
 </FONT></P>
 
 <FONT SIZE=5 STYLE="font-size: 20pt"><B>16.01.2011 - Релиз 
-<A HREF="https://github.com/pa23/r49/downloads">r49-11.03</A>
+r49-11.03
 </B></FONT>
 <P STYLE="font-weight: normal"><FONT SIZE=4>
 <ol>
@@ -45,6 +50,11 @@ I like github )
     <li>Для некоторых объектов, не имеющих в предках QObject, управление памятью реализовано через "умные" указатели.</li>
     <li>Улучшения стиля кода по всему проекту.</li>
 </ol>
+</FONT></P>
+
+<FONT SIZE=5 STYLE="font-size: 20pt"><B>07.01.2011 - Заметка</B></FONT>
+<P STYLE="font-weight: normal"><FONT SIZE=4>
+I like github )
 </FONT></P>
 
 <P STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.08cm; padding-left: 0cm; padding-right: 0cm"><BR></P>
