Improving of site style.

--- a/blog.html
+++ b/blog.html
@@ -7,62 +7,62 @@
     <META NAME="AUTHOR" CONTENT="Artem Petrov">
 </HEAD>
 <BODY LANG="ru-RU" LINK="#000080" VLINK="#800000" DIR="LTR">
-<FONT SIZE=7 STYLE="font-size: 48pt"><B>pa23</B></FONT><BR><BR>
+<FONT SIZE="7"><B>pa23</B></FONT><BR><BR>
 <TABLE WIDTH=100% CELLPADDING=4 CELLSPACING=0>
     <TR VALIGN=TOP>
         <TD WIDTH=25% STYLE="border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-            <A HREF="http://pa23.github.com/"><FONT SIZE=4>Главная</FONT></A></P>
+            <A HREF="http://pa23.github.com/">Главная</A></P>
         </TD>
         <TD WIDTH=25% STYLE="; border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="background: #e6e6ff; border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-            <A HREF="http://pa23.github.com/blog.html"><FONT SIZE=4>Блог</FONT></A></P>
+            <A HREF="http://pa23.github.com/blog.html"><B>Блог</B></A></P>
         </TD>
         <TD WIDTH=25% STYLE="; border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-            <A HREF="http://pa23.github.com/projects.html"><FONT SIZE=4>Проекты</FONT></A></P>
+            <A HREF="http://pa23.github.com/projects.html">Проекты</A></P>
         </TD>
         <TD WIDTH=25% STYLE="; border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-            <A HREF="http://pa23.github.com/blog_archive.html"><FONT SIZE=4>Архив</FONT></A></P>
+            <A HREF="http://pa23.github.com/blog_archive.html">Архив</A></P>
         </TD>
     </TR>
 </TABLE>
 <BR>
 
-<FONT SIZE=5 STYLE="font-size: 20pt"><B>17.01.2011 - Релиз 
+<FONT SIZE="5"><B>17.01.2011 - Релиз 
 <A HREF="https://github.com/pa23/r49/downloads">r49-11.04</A>
 </B></FONT>
-<P STYLE="font-weight: normal"><FONT SIZE=4>
+<P>
 <ol>
     <li>Улучшено удобство использования программы - установлена двусторонняя связь между табами главного окна и заданием на расчет (панель настройки расчета - task).</li>
     <li>Установлена корректная ширина столбца при формировании файла-заготовки для расчета выбросов вредных веществ.</li>
 </ol>
-</FONT></P>
+</P>
 
-<FONT SIZE=5 STYLE="font-size: 20pt"><B>16.01.2011 - Релиз 
+<FONT SIZE="5"><B>16.01.2011 - Релиз 
 r49-11.03
 </B></FONT>
-<P STYLE="font-weight: normal"><FONT SIZE=4>
+<P>
 <ol>
     <li>Весь проект переведен на использование контейнеров библиотеки Qt вместо низкоуровневых массивов с ручным управлением памятью.</li>
     <li>Удалены операторы освобождения памяти вручную для объектов, среди предков которых есть QObject.</li>
     <li>Для некоторых объектов, не имеющих в предках QObject, управление памятью реализовано через "умные" указатели.</li>
     <li>Улучшения стиля кода по всему проекту.</li>
 </ol>
-</FONT></P>
+</P>
 
-<FONT SIZE=5 STYLE="font-size: 20pt"><B>07.01.2011 - Заметка</B></FONT>
-<P STYLE="font-weight: normal"><FONT SIZE=4>
+<FONT SIZE="5"><B>07.01.2011 - Заметка</B></FONT>
+<P>
 I like github )
-</FONT></P>
+</P>
 
 <P STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.08cm; padding-left: 0cm; padding-right: 0cm"><BR></P>
-<P ALIGN=CENTER><FONT SIZE=4>
+<P ALIGN=CENTER>
     <A HREF="https://github.com/pa23">github</A> | 
     <A HREF="http://vkontakte.ru/pa2311">vkontakte</A> | 
     <A HREF="http://www.facebook.com/profile.php?id=100001046779586">facebook</A>
-</FONT></P>
+</P>
 </BODY>
 </HTML>
 
