--- a/projects.html
+++ b/projects.html
@@ -7,37 +7,42 @@
     <META NAME="AUTHOR" CONTENT="Artem Petrov">
 </HEAD>
 <BODY LANG="ru-RU" LINK="#000080" VLINK="#800000" DIR="LTR">
-<FONT SIZE=7 STYLE="font-size: 48pt"><B>pa23</B></FONT><BR><BR>
+<FONT SIZE="7"><B>pa23</B></FONT><BR><BR>
 <TABLE WIDTH=100% CELLPADDING=4 CELLSPACING=0>
     <TR VALIGN=TOP>
         <TD WIDTH=25% STYLE="border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-            <A HREF="http://pa23.github.com/"><FONT SIZE=4>Главная</FONT></A></P>
+            <A HREF="http://pa23.github.com/">Главная</A></P>
         </TD>
         <TD WIDTH=25% STYLE="; border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-            <A HREF="http://pa23.github.com/blog.html"><FONT SIZE=4>Блог</FONT></A></P>
+            <A HREF="http://pa23.github.com/blog.html">Блог</A></P>
         </TD>
         <TD WIDTH=25% STYLE="; border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="background: #e6e6ff; border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-            <A HREF="http://pa23.github.com/projects.html"><FONT SIZE=4>Проекты</FONT></A></P>
+            <A HREF="http://pa23.github.com/projects.html"><B>Проекты</B></A></P>
         </TD>
         <TD WIDTH=25% STYLE="; border: none; padding: 0cm">
             <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
-            <A HREF="http://pa23.github.com/blog_archive.html"><FONT SIZE=4>Архив</FONT></A></P>
+            <A HREF="http://pa23.github.com/blog_archive.html">Архив</A></P>
         </TD>
     </TR>
 </TABLE>
 <BR>
 
-<FONT SIZE=5 STYLE="font-size: 20pt"><B>r49</B></FONT>
-<P STYLE="font-weight: normal"><FONT SIZE=4>
+<FONT SIZE="5"><B>r49:</B></FONT>
+<SPAN>
+    <A HREF="https://github.com/pa23/r49">Страница проекта</A> | 
+    <A HREF="http://sites.google.com/site/pa23r49/">Старый сайт</A> | 
+    <A HREF="https://github.com/pa23/r49/downloads">Загрузки</A>
+</SPAN>
+<P>
 Программный комплекс r49 предназначен для расчета удельных выбросов вредных веществ (ВВ) 
 с отработавшими газами (ОГ) дизельных двигателей, испытываемых по стационарным циклам на 
 соответствие нормативам Евро-0..Евро-6 (Правила ЕЭК ООН №49 Ревизия 1 и Ревизия 4), 
 Правила ЕЭК ООН №96 Ревизия 1, ОСТ 37.001.234-81, ГОСТ 17.2.2.05-97, ГОСТ 30574-98 и ГОСТ Р 51249-99.
 <BR><BR>
-Возможности r49:
+<B>Возможности r49:</B>
 <ul>
     <li>расчет оборотов A, B и C для стационарных циклов Евро-3..Евро-6;</li>
     <li>расчет точек (частота вращения коленчатого вала двигателя, крутящий момент, потери мощности на привод вентилятора и т.д.) для 13-ти ступенчатого цикла Евро-0..Евро-2, 5-ти и 8-ми ступенчатых циклов, 13-ти ступенчатого цикла Евро-3..Евро-6, циклов C1, D1, D2, E1, E2, E3, E5, F, G1, G2, а также циклов по ОСТ 37.001.234-81 и ГОСТ 17.2.2.05-97;</li>
@@ -46,7 +51,7 @@
     <li>расчет дымности отработавших газов по циклу ELR;</li>
     <li>"свободный" расчет удельных выбросов (напр., при снятии регулировочных характеристик, без привязки к точкам какого-либо цикла).</li>
 </ul>
-r49 также позволяет:
+<B>r49 также позволяет:</B>
 <ul>
     <li>ориентироваться на крутящий момент брутто или мощность брутто (по выбору) при расчете мощности двигателя нетто;</li>
     <li>использовать в расчете непосредственные замеры расхода воздуха или расчитывать его по значениям разрежения на измерительном сопле;</li>
@@ -56,7 +61,7 @@ r49 также позволяет:
     <li>рассчитывать удельные выбросы "твердых" частиц (ТЧ) по циклу, основываясь на массах осевших на фильтрах ТЧ, или по значениям дымности ОГ, представленной в 1/м, % или FSN;</li>
     <li>оценивать корректность замеров расхода воздуха двигателем, основываясь на замерах концентраций кислорода в ОГ.</li>
 </ul>
-Люди, внесшие вклад в проект ценными советами:
+<B>Люди, внесшие вклад в проект ценными советами:</B>
 <ol>
     <li>Борис Романович Бланкштейн</li>
     <li>Евгений Константинович Шприц</li>
@@ -64,41 +69,36 @@ r49 также позволяет:
     <li>Андрей Кукушкин</li>
     <li>Дмитрий Епанешников</li>
 </ol>
-Скриншоты:
-<ol>
-    <li><A HREF="http://pa23.github.com/r49_scr1.png">Qr49 после внесения исходных данных для расчета выбросов вредных выбросов с отработавшими газами</A></li>
-    <li><A HREF="http://pa23.github.com/r49_scr2.png">Qr49 после расчета выбросов вредных выбросов с отработавшими газами</A></li>
-</ol>
-</FONT></P>
-<FONT SIZE=4><SPAN STYLE="font-weight: normal">
-    <A HREF="https://github.com/pa23/r49">Страница проекта</A> | 
-    <A HREF="http://sites.google.com/site/pa23r49/">Старый сайт</A> | 
-    <A HREF="https://github.com/pa23/r49/downloads">Загрузки</A>
-</SPAN></FONT>
+<B>Скриншоты:</B>
+<P>
+<IMG src="r49_scr1.png">
+<IMG src="r49_scr2.png">
+</P>
+</P>
 
 <P STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.08cm; padding-left: 0cm; padding-right: 0cm"><BR></P>
 
-<FONT SIZE=5 STYLE="font-size: 20pt"><B>strcnt</B></FONT>
-<P STYLE="font-weight: normal"><FONT SIZE=4>
-Определение числа непустых строк в текстовых файлах.
-<BR><BR>
-Скриншоты:
-<ol>
-    <li><A HREF="http://pa23.github.com/strcnt_scr1.png">strcnt с введенными данными</A></li>
-    <li><A HREF="http://pa23.github.com/strcnt_scr2.png">strcnt с результатами поиска и подсчета</A></li>
-</ol>
-</FONT></P>
-<FONT SIZE=4><SPAN STYLE="font-weight: normal">
+<FONT SIZE="5"><B>strcnt:</B></FONT>
+<SPAN>
     <A HREF="https://github.com/pa23/strcnt">Страница проекта</A> | 
     <A HREF="https://github.com/pa23/strcnt/downloads">Загрузки</A>
-</SPAN></FONT>
+</SPAN>
+<P>
+Определение числа непустых строк в текстовых файлах.
+<BR><BR>
+<B>Скриншоты:</B>
+<P>
+<IMG src="strcnt_scr1.png">
+<IMG src="strcnt_scr2.png">
+</P>
+</P>
 
 <P STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.08cm; padding-left: 0cm; padding-right: 0cm"><BR></P>
-<P ALIGN=CENTER><FONT SIZE=4>
+<P ALIGN=CENTER>
     <A HREF="https://github.com/pa23">github</A> | 
     <A HREF="http://vkontakte.ru/pa2311">vkontakte</A> | 
     <A HREF="http://www.facebook.com/profile.php?id=100001046779586">facebook</A>
-</FONT></P>
+</P>
 </BODY>
 </HTML>
 
